# constraint-theory-engine-cpp-lua

./: AGENT.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml
benches/: bench_throughput.cpp
examples/: demo.cpp
include/flux/: avx512_check.hpp  constraint.hpp  emitter.hpp  lua_bridge.hpp  solver.hpp
lua/: flux.lua  presets.lua
lua/examples/: automotive.lua  battery.lua  marine.lua
memory/: JOURNAL.md
src/: avx512_check.cpp  constraint.cpp  emitter.cpp  lua_bridge.cpp  solver.cpp
tests/: test_avx512.cpp  test_constraint.cpp  test_constraint_extended.cpp  test_emitter.cpp  test_lua_bridge.cpp  test_lua_flux.lua  test_solver.cpp  test_solver_extended.cpp
